content update ejs

--- a/neramExpressApp/views/partials/header.ejs
+++ b/neramExpressApp/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header class="navbar">
     <div class="logo">
       <a href="/">
-        <img src="../../public/media/images/neramtransparent.png" alt="Neram Logo" />
+        <img src="/images/neramtransparent.png" alt="Neram Logo" />
       </a>
     </div>
     <nav>
