--- a/neramExpressApp/views/index.ejs
+++ b/neramExpressApp/views/index.ejs
@@ -4,19 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Neram</title>
+  <link rel="stylesheet" href="/stylesheets/global.css">
   <link rel="stylesheet" href="/stylesheets/header.css">
+  <link rel="stylesheet" href="/stylesheets/hero.css">
+  <link rel="stylesheet" href="/stylesheets/about.css">
+
 </head>
 <body>
   <!-- Include Header -->
   <%- include('partials/header') %>
+  <%- include('partials/hero') %>
+  <%- include('partials/about') %>
 
   <!-- Main Content -->
-  <main>
-    <section class="hero">
-      <h1>Welcome to Neram</h1>
-      <p>Your trusted partner in financial innovation.</p>
-    </section>
-  </main>
+
 
   <script src="/javascripts/navbar.js"></script>
 </body>
