--- a/neramExpressApp/views/partials/header.ejs
+++ b/neramExpressApp/views/partials/header.ejs
@@ -7,7 +7,7 @@
     <nav>
       <ul>
         <li><a href="/">About</a></li>
-        <li><a href="/services">Services</a></li>
+        <li><a href="/strategies">Strategies</a></li>
         <li><a href="/insights">Insights</a></li>
         <li><a href="/careers">Careers</a></li>
       </ul>
