--- a/neramExpressApp/views/index.ejs
+++ b/neramExpressApp/views/index.ejs
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="/stylesheets/header.css">
   <link rel="stylesheet" href="/stylesheets/hero.css">
   <link rel="stylesheet" href="/stylesheets/about.css">
+  <link rel="stylesheet" href="/stylesheets/investmentapproach.css">
+  <link rel="stylesheet" href="/stylesheets/footer.css">
+ 
+
+
 
 </head>
 <body>
@@ -15,10 +20,14 @@
   <%- include('partials/header') %>
   <%- include('partials/hero') %>
   <%- include('partials/about') %>
+  <%- include('partials/investmentapproach') %>
+  <%- include('partials/footer') %>
 
   <!-- Main Content -->
 
 
   <script src="/javascripts/navbar.js"></script>
+  <script src="/javascripts/global.js"></script>
+
 </body>
 </html>
