service page finishing

--- a/neramExpressApp/views/partials/hero.ejs
+++ b/neramExpressApp/views/partials/hero.ejs
@@ -6,7 +6,7 @@
     <div class="hero-content">
       <h1 class="font-playfair">Together, We<br />Shape Ambition<br />Into Reality</h1>
       <p class="font-lora">
-        For those at our service, Neram has uncovered hidden opportunities in the financial markets by empowering exceptional minds to push boundaries and deliver groundbreaking solutions.
+        Neram has uncovered hidden opportunities in the financial markets by empowering exceptional minds to push boundaries and deliver groundbreaking solutions.
       </p>
       <button onclick="scrollToSection('about')" class="font-sourcesans">Discover More</button>
     </div>
