--- a/neramExpressApp/views/index.ejs
+++ b/neramExpressApp/views/index.ejs
@@ -26,7 +26,7 @@
   <!-- Main Content -->
 
 
-  <script src="/javascripts/navbar.js"></script>
+  <script src="/javascripts/homenav.js"></script>
   <script src="/javascripts/global.js"></script>
 
 </body>
