--- a/neramExpressApp/views/partials/featured-job.ejs
+++ b/neramExpressApp/views/partials/featured-job.ejs
@@ -2,15 +2,11 @@
     <!-- Left Section: Job Info -->
     <div class="job-info">
       <h2>Chief Vision Officer</h2>
-  
-  
       <p class="summary">
         Lead our innovation strategy and drive groundbreaking solutions. Shape 
         Neram’s future while fostering a culture of bold ideas.
       </p>
-  
       <div class="labels">
-
         <span class="new">NEW</span>
       </div>
     </div>
@@ -22,7 +18,7 @@
         alt="Chief Vision Officer"
         class="featured-image"
       />
-      <form action="/applying" method="get">
+      <form action="/applypage" method="get">
         <button type="submit" class="apply-button">Apply Now</button>
       </form>
     </div>
