--- a/neramExpressApp/views/strategies.ejs
+++ b/neramExpressApp/views/strategies.ejs
@@ -116,3 +116,4 @@
 </div>
 <%- include('partials/footer') %>
 <script src="/javascripts/strategies.js"></script>
+<script src="/javascripts/navbar.js"></script>
