--- a/neramExpressApp/views/partials/featured-job.ejs
+++ b/neramExpressApp/views/partials/featured-job.ejs
@@ -22,7 +22,7 @@
         alt="Chief Vision Officer"
         class="featured-image"
       />
-      <form action="/applying" method="get">
+      <form action="/apply" method="get">
         <button type="submit" class="apply-button">Apply Now</button>
       </form>
     </div>
