--- a/neramExpressApp/public/stylesheets/header.css
+++ b/neramExpressApp/public/stylesheets/header.css
@@ -97,7 +97,7 @@
   .navbar nav ul li a {
     font-size: 0.9rem;
     font-weight: 400;
-    color: #a8a8a8; 
+    color: #3e3e3e; 
     text-decoration: none;
     padding: 8px 10px;
     border-radius: 5px;
