--- a/neramExpressApp/views/careers.ejs
+++ b/neramExpressApp/views/careers.ejs
@@ -1,3 +1,9 @@
+<meta property="og:title" content="<%= meta.title %>" />
+<meta property="og:description" content="<%= meta.description %>" />
+<meta property="og:image" content="<%= meta.image %>" />
+<meta property="og:url" content="<%= meta.url %>" />
+
+
 <%- include('partials/header') %>
 
 <link rel="stylesheet" href="/stylesheets/hero-careers.css">
