--- a/neramExpressApp/views/careers.ejs
+++ b/neramExpressApp/views/careers.ejs
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:title" content="<%= meta.title %>" />
 <meta property="og:description" content="<%= meta.description %>" />
 <meta property="og:image" content="<%= meta.image %>" />
@@ -5,7 +10,7 @@
 
 
 <%- include('partials/header') %>
-
+</head>
 <link rel="stylesheet" href="/stylesheets/hero-careers.css">
 <link rel="stylesheet" href="/stylesheets/students-and-roles.css">
 <link rel="stylesheet" href="/stylesheets/featured-job.css">
@@ -46,3 +51,5 @@
 <script src="/javascripts/global.js"></script>
 
 <script src="/javascripts/careers.js"></script>
+</body>
+</html>
