--- a/neramExpressApp/views/careers.ejs
+++ b/neramExpressApp/views/careers.ejs
@@ -7,10 +7,11 @@
 <meta property="og:description" content="<%= meta.description %>" />
 <meta property="og:image" content="<%= meta.image %>" />
 <meta property="og:url" content="<%= meta.url %>" />
+<meta property="og:type" content="website" />
+
 
 
 <%- include('partials/header') %>
-</head>
 <link rel="stylesheet" href="/stylesheets/hero-careers.css">
 <link rel="stylesheet" href="/stylesheets/students-and-roles.css">
 <link rel="stylesheet" href="/stylesheets/featured-job.css">
@@ -20,6 +21,7 @@
 <link rel="stylesheet" href="/stylesheets/careers.css">
 <link rel="stylesheet" href="/stylesheets/partialscss/careerssection.css">
 
+</head>
 
 <%- include('partials/hero-careers') %>
 
