--- a/neramExpressApp/views/careers.ejs
+++ b/neramExpressApp/views/careers.ejs
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:title" content="<%= meta.title %>" />
-<meta property="og:description" content="<%= meta.description %>" />
-<meta property="og:image" content="<%= meta.image %>" />
-<meta property="og:url" content="<%= meta.url %>" />
+  <meta property="og:title" content="Join Neram - Careers" />
+  <meta property="og:description" content="Explore exciting opportunities at Neram and be part of our innovative team shaping the future of finance." />
+  <meta property="og:image" content="https://resumesapplicaiton.blob.core.windows.net/previews/careers-preview.png" />
+  <meta property="og:url" content="https://neram.live/careers" />
 <meta property="og:type" content="website" />
 
 
