--- a/neramExpressApp/public/stylesheets/insights.css
+++ b/neramExpressApp/public/stylesheets/insights.css
@@ -12,7 +12,7 @@ section {
 .insights-header {
   margin-top: 2%;
   text-align: center;
-  padding: 2rem 0;
+  padding: 2em 0;
 }
 
 .insights-header h1 {
