--- a/neramExpressApp/views/insights.ejs
+++ b/neramExpressApp/views/insights.ejs
@@ -8,10 +8,21 @@
   <link rel="stylesheet" href="/stylesheets/global.css">
   <link rel="stylesheet" href="/stylesheets/header.css">
   <link rel="stylesheet" href="/stylesheets/footer.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Join Neram - Careers" />
+  <meta property="og:description" content="Explore exciting opportunities at Neram and be part of our innovative team shaping the future of finance." />
+  <meta property="og:image" content="https://resumesapplicaiton.blob.core.windows.net/previews/insights-preview.png" />
+  <meta property="og:url" content="https://neram.live/insights" />
+<meta property="og:type" content="website" />
+
+
+
 </head>
 <body>
   <!-- Header -->
   <%- include('partials/header') %>
+  <%- include('partials/investmentapproach') %>
 
   <section class="insights-page">
     <!-- Insights Header -->
